# project_orion

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
app/: __main__.py  config.py  data.py  fibonacci.py  indicators.py  main.py  models.py  scanner.py  setups.py
